# internal/employees/controller/employee_controller.go
@@ -196,7 +196,7 @@ func (c EmployeeController) Delete() gin.HandlerFunc {
 // @Accept json
 // @Produce json
 // @Param id query int true "employee ID"
-// @Success 200 {object} domain.InboundOrderE
+// @Success 200 {object} domain.InboundOrderResponse
 // @Failure 404 {object} schemas.JSONBadReqResult{error=string}
 // @Failure 500 {object} schemas.JSONBadReqResult{error=string}
 // @Router /employees/reportInboundOrders [get]
