# internal/employees/domain/employee_model.go
@@ -8,7 +8,7 @@ type Employee struct {
 	WarehouseId  int64  `json:"warehouse_id"`
 }
 
-type InboundOrderE struct {
+type InboundOrderResponse struct {
 	ID                 int64  `json:"id"`
 	CardNumberId       string `json:"card_number_id"`
 	FirstName          string `json:"first_name"`
